done until rates

--- a/appendix/derivation_jortner.tex
+++ b/appendix/derivation_jortner.tex
@@ -7,6 +7,7 @@
 %\appendixpage
 %\addappheadtotoc
 \chapter{Bimolecular electron transfer rate}
+\label{sec:rate_bimolecular}
 
 \begin{figure*}[ht]
 %    \includegraphics[width=1.0\textwidth]{fig/jortner_rate/marcus_parabolas_new}
