--- a/input/input.tex
+++ b/input/input.tex
@@ -1,4 +1,4 @@
-\chapter{Input files}
+\chapter{Input and output files}
 \label{sec:mapping}
 
 \xml-based input files specify atomistic topology, coarse-grained topology, and define conjugated segments. In addition, practically every \calculator requires options provided in a separate \xml file.
@@ -7,3 +7,4 @@
 \input{input/topology_coarsegrained}
 \input{input/topology_conjseg}
 \input{input/orbitals_zindo}
+\input{input/output_dft}
