--- a/newcommands.tex
+++ b/newcommands.tex
@@ -12,6 +12,7 @@
 \newcommand{\gaussian}{GAUSSIAN\xspace}
 \newcommand{\turbomole}{TURBOMOLE\xspace}
 \newcommand{\tinker}{TINKER\xspace}
+\newcommand{\dipro}{DIPRO\xspace}
 
 \newcommand{\Alq}{$\mathrm{Alq}_3$\xspace}
 \newcommand{\dcvt}{DCV2T\xspace}
