--- a/theory/neighborlist.tex
+++ b/theory/neighborlist.tex
@@ -1,4 +1,6 @@
 \section{Neighbor list}
+\label{sec:neighborlist}
+
 A list of neigboring molecules, or neighbor list\index{neighbor list}, containes all pairs of molecules for which \slink{transfer_integrals}{coupling elements}, \slink{reorganization}{reorganization energies}, \slink{site_energies}{site energy differences}, and \slink{rates}{rates} are evaluated.
 
 Two segments are added to this list if the distance between centers of mass of any of their rigid fragments is below a certain cutoff. This allows neighbors to be selected on a criterion of minimum distance of approach rather than center of mass distance, which is useful for molecules with anisotropic shapes.
