--- a/theory/rate.tex
+++ b/theory/rate.tex
@@ -5,7 +5,7 @@ Charge transfer rates\index{charge transfer rate} can be postulated based on int
 
 \subsection{Classical charge transfer rate}
 \label{sec:rate_classical}
-\index{charge transfer rate|classical}
+\index{charge transfer rate!classical}
 
 The high temperature limit of classical charge transfer  theory~\cite{marcus_electron_1993,hutchison_hopping_2005} is often used as a trade-off between theoretical rigor and computational complexity. It captures key parameters which influence charge transport while at the same time providing an analytical expression for the rate. Within this limit, the transfer rate for a charge to hop from a site $i$ to a site $j$ reads
 %
@@ -21,7 +21,7 @@ where $T$ is the temperature, $\lambda_{ij} = \lambda_{ij}^\text{int} + \lambda_
 
 \subsection{Semi-classical bimolecular rate}
 \label{sec:rate_bimolecular}
-\index{charge transfer rate|bimolecular}
+\index{charge transfer rate!bimolecular}
 
 \newcommand{\indM}{l}
 \newcommand{\indN}{m}
@@ -63,7 +63,7 @@ where $H_n(x)$ is a Hermite polynomial, $s_i=\frac{2\sqrt{\lambda_i^{nc}\lambda_
 
 \subsection{Semi-classical rate}
 \label{sec:rate_semiclassical}
-\index{charge transfer rate|semiclassical}
+\index{charge transfer rate!semiclassical}
 
 One can also use the quantum-classical rate with a common set of vibrational coordinates~\cite{may_charge_2003}
 \begin{align}
