--- a/manual.tex
+++ b/manual.tex
@@ -111,13 +111,22 @@ pdfpagemode=UseNone]{hyperref}
 \input{theory/analysis}
 \input{theory/correlations}
 
-\include{input/input}
+\chapter{Input and output files}
+\label{sec:io}
+
+\xml-based input files specify atomistic topology, coarse-grained topology, and define conjugated segments. In addition, practically every \calculator requires options provided in a separate \xml file.
+
+\input{input/topology_atomistic}
+\input{input/topology_coarsegrained}
+\input{input/topology_conjseg}
+\input{input/orbitals_zindo}
+\input{input/output_dft}
+\input{input/statefile}
 
 \include{reference/reference}
 
 \appendix
 %\input{appendix/derivation_jortner}
-\input{appendix/statefile}
 \input{appendix/moo_standalone}
 
 \nolinenumbers
