--- a/manual.bib
+++ b/manual.bib
@@ -52,6 +52,21 @@
 	pages = {210--214}
 },
 
+@article{derrida_velocity_1983,
+	title = {Velocity and diffusion constant of a periodic one-dimensional hopping model},
+	volume = {31},
+	url = {http://dx.doi.org/10.1007/BF01019492},
+	doi = {10.1007/BF01019492},
+	abstract = {The velocity and the diffusion constant are obtained for a periodic onedimensional hopping model of arbitrary {periodN.} These two quantities are expressed as explicit functions of all the hopping rates. The velocity and the diffusion constant of random systems are calculated by taking the limit N??. One finds by varying the distribution of hopping rates that the diffusion constant and the velocity are singular at different points. Lastly, several possible applications are proposed.},
+	number = {3},
+	journal = {Journal of Statistical Physics},
+	author = {Derrida, Bernard},
+	month = jun,
+	year = {1983},
+	keywords = {mobility in {1D} general for any rates},
+	pages = {433--450}
+},
+
 @article{valeev_effect_2006,
 	title = {Effect of Electronic Polarization on {Charge-Transport} Parameters in Molecular Organic Semiconductors},
 	volume = {128},
@@ -161,6 +176,20 @@
 	year = {1996},
 	keywords = {Electron transfer, Glassy solvents, Reorganization energy, Solvent dynamics},
 	pages = {233--238}
+},
+
+@article{dunlap_charge-dipole_1996,
+	title = {{Charge-Dipole} Model for the Universal Field Dependence of Mobilities in Molecularly Doped Polymers},
+	volume = {77},
+	issn = {0031-9007},
+	url = {http://adsabs.harvard.edu/abs/1996PhRvL..77..542D},
+	doi = {10.1103/PhysRevLett.77.542},
+	number = {3},
+	journal = {Physical Review Letters},
+	author = {Dunlap, D. and Parris, P. and Kenkre, V.},
+	month = jul,
+	year = {1996},
+	pages = {542--545}
 },
 
 @article{nagata_atomistic_2008,
@@ -402,6 +431,47 @@
 	author = {May, Volkhard and K\"{u}hn, Oliver},
 	month = dec,
 	year = {2003}
+},
+
+@article{novikov_cluster_1995,
+	title = {Cluster Structure in the Distribution of the Electrostatic Potential in a Lattice of Randomly Oriented Dipoles},
+	volume = {99},
+	url = {http://dx.doi.org/10.1021/j100040a001},
+	doi = {10.1021/j100040a001},
+	number = {40},
+	journal = {The Journal of Physical Chemistry},
+	author = {Novikov, Sergey V. and Vannikov, Anatoly V.},
+	month = oct,
+	year = {1995},
+	pages = {14573--14576}
+},
+
+@article{novikov_essential_1998,
+	title = {Essential Role of Correlations in Governing Charge Transport in Disordered Organic Materials},
+	volume = {81},
+	url = {http://link.aps.org/doi/10.1103/PhysRevLett.81.4472},
+	doi = {10.1103/PhysRevLett.81.4472},
+	abstract = {The transport of photoinjected charges in disordered organic films is often interpreted using a formula based on a Gaussian disorder model {(GDM)} that neglects spatial correlations due to charge-dipole interactions, even though such correlations have recently been shown to explain the universal electric field dependence observed in these systems. Based on extensive computer simulations of a {3D} disorder model that includes such correlations, we present a new formula for analyzing experiments that accurately describes transport in these materials.},
+	number = {20},
+	journal = {Physical Review Letters},
+	author = {Novikov, S. V. and Dunlap, D. H. and Kenkre, V. M. and Parris, P. E. and Vannikov, A. V.},
+	month = nov,
+	year = {1998},
+	pages = {4472}
+},
+
+@article{van_der_holst_modeling_2009,
+	title = {Modeling and analysis of the three-dimensional current density in sandwich-type single-carrier devices of disordered organic semiconductors},
+	volume = {79},
+	url = {http://link.aps.org/doi/10.1103/PhysRevB.79.085203},
+	doi = {10.1103/PhysRevB.79.085203},
+	abstract = {We present the results of a modeling study of the three-dimensional current density in single-carrier sandwich-type devices of disordered organic semiconductors. The calculations are based on a master-equation approach, assuming a Gaussian distribution of site energies without spatial correlations. The injection-barrier lowering due to the image potential is taken into account, so that the model provides a comprehensive treatment of the space-charge-limited current as well as the injection-limited current {(ILC)} regimes. We show that the current distribution can be highly filamentary for voltages, layer thicknesses, and disorder strengths that are realistic for organic light-emitting diodes and, that, as a result, the current density in both regimes can be significantly larger than as obtained from a one-dimensional continuum drift-diffusion device model. For devices with large injection barriers and strong disorder, in the {ILC} transport regime, good agreement is obtained with the average current density predicted from a model assuming injection and transport via one-dimensional filaments {[A.} L. Burin and M. A. Ratner, J. Chem. Phys. 113, 3941 (2000)].},
+	number = {8},
+	journal = {Physical Review B},
+	author = {van der Holst, J. J. M. and Uijttewaal, M. A. and Ramachandhran, B. and Coehoorn, R. and Bobbert, P. A. and de Wijs, G. A. and de Groot, R. A.},
+	month = feb,
+	year = {2009},
+	pages = {085203}
 },
 
 @article{marcon_columnar_2008,
