--- a/theory/dft.tex
+++ b/theory/dft.tex
@@ -6,7 +6,7 @@
 Within the dimer projection method~\cite{valeev_effect_2006,baumeier_density-functional_2010}, explicit quantum-chemical calculations are required for every molecule and every hopping pair in the morphology. As a consequence, this procedure is significantly more computationally demanding. The code currently contains scripts which support evaluation of transfer integrals from quantum-chemical calculations performed with the \gaussian and \turbomole packages. The interfacing procedure consists of three main steps: generation of directory structures containing input coordinates for monomers and dimers, performing the actual quantum-chemical calculations and calculating the transfer integrals, and finally reading the output into the state file.
 
 \subsubsection{Directory structure and input coordinates}
-First, \slink{segments}{hopping sites} and a \slink{neighborlist}{neighbor list} need to be generated from the atomistic topology and trajectory and written to the \sqlstate file. The directory structure, and coordinate files of monomers and dimers are then generated using the \calc{pairdump} \calculator
+First, \slink{conjugated_segments}{hopping sites} and a \slink{neighborlist}{neighbor list} need to be generated from the atomistic topology and trajectory and written to the \sqlstate file. The directory structure, and coordinate files of monomers and dimers are then generated using the \calc{pairdump} \calculator
 \vskip 0.1cm
 {\noindent \small \ctprun \opt \xmloptions \seg \xmlsegments \ \sqlstate \exe \calc{pairdump} }
 \vskip 0.1cm
